--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "lodash.merge": "^4.6.2",
+    "mongoose": "^6.8.1",
     "morgan": "^1.10.0",
     "supertest": "^6.3.1",
     "ts-jest": "^29.0.3"
