--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "typescript": "^4.9.3"
   },
   "scripts": {
-    "dev": "ts-node src/server.ts",
+    "dev": "nodemon src/server.ts",
     "test": "jest",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js"
