--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "dev": "nodemon src/server.ts",
     "test": "jest",
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/index.js"
+    "start": "node dist/server.js"
   },
   "repository": {
     "type": "git",
