--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/lodash.merge": "^4.6.7",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.9",
+    "@types/pg": "^8.10.7",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
